@@ -13,6 +13,8 @@
 #include <stdlib.h>
 #include <stdio.h>
 
+#include <map>
+
 #include <dirent.h>
 #include <sys/stat.h>
 #include <sys/types.h>
@@ -21,12 +23,27 @@
 
 namespace WFUT {
 
+#ifdef PLATFORM_WIN32
+// This is a bit of a nasty hack to make sure that when we
+// close a tmp file, we also delete it.
+typedef std::map<FILE *, char *> TmpFileMap;
+static TmpFileMap tmp_file_map;
+#endif
+
 FILE *os_create_tmpfile() {
 #ifdef PLATFORM_WIN32
+  // Check to see if there are temp dirs defined, else use current directory.
+  static const char cwd[] = ".";
   const char *tmpdir = getenv("TMP");
-  char *filename = ::tempnam(tmpdir, "wfut");
+  const char *tempdir = getenv("TEMP");
+  // Make the choice
+  const char *t_dir = (tmpdir != 0) ? (tmpdir) : ( (tempdir != 0) ? (tempdir) : (cwd)); 
+  char *filename = tempnam(t_dir, "wfut");
   FILE *fp = fopen(filename, "w+b");
-  free(filename);
+  if (fp != NULL) {
+    // Record the filename for the FILE pointer
+    tmp_file_map[fp] = filename;
+  }
   return fp;
 #else
   return tmpfile();
@@ -36,10 +53,14 @@ FILE *os_create_tmpfile() {
 void os_free_tmpfile(FILE *fp) {
   assert(fp != 0);
 #ifdef PLATFORM_WIN32
-  // TODO delete this file
-  fclose(fp);
+  TmpFileMap::iterator I = tmp_file_map.find(fp);
+  assert (I != tmp_file_map.end());
+  fclose(I->first);       // Close file handle
+  unlink(I->second);      // Delete the tmp file
+  free(I->second);        // Free up the mem allocated to the filename
+  tmp_file_map.erase(I);  // Get rid of the record.
 #else 
- // tmpfile cleanup after itself
+ // tmpfile cleans up after itself
   fclose(fp);
 #endif
 }
